		  to provide dot-product and similar operations (hence the name).
		  This enables training of linear methods with mixed datatypes
		  (sparse and dense and other even the newly implemented string
		  based SpecFeatures and WDFeatures).
		- MKL now does not require CPLEX any longer.
		- Add q-norm MKL support based on Newton.
		- Add 1-norm MKL support based on GLPK.
		- Support compilation on the iPhone :)
		- Add an option to set wds kernel position weights.
		- Build static libshogun.a for libshogun target.
		- Testsuite can also test for modular R interface, added test for
		  OligoKernel.
	* Cleanup:
		- Remove WDSVMOcas as it is implemented now via a linear classifier
		  and WDFeatures
		- Remove SparseLinearClassifier: LinearClassifier is a drop-in
		  replacement.
	* Bugfixes:
		- Fix regression for COMM* kernels (normalization argument was ignored).
		- Use C99 variadic macros, instead of gcc's own variant.
		- Disable lp_solve, it is not required right now.

2008-11-25 Soeren Sonnenburg <debian@nn7.de>

	* SHOGUN Release version 0.6.7
	* Cleanup:
		- Replace ambigous self-defined data types for char/int/float etc.
		by 'standardized' types.
		- Method classify() in WDSVMOcas now has a default value for its
		  argument.
		- Removed a few stderr debug outputs.
	* Features:
		- Testsuite now covers subSVMs in MultiClassSVMs, static interfaces
		  now support commands GET_NUM_SVMS and GET_SVM for MultiClassSVMs.
	* Bugfixes:
		- Fix for contigous arrays/vectors in interface for Python modular.
		- Fixed improper assignment of labels in constructor of WDSVMOcas
		  leading to segfaults on destruction in (python) modular interface.
		- Fixed a segfault opportunity in MultiClassSVM.

2008-10-11  Soeren Sonnenburg <debian@nn7.de>

	* SHOGUN Release version 0.6.6
	* Bugfixes:
		- Include missing file regression/Regression.h.
		- Fix formula in CosineDistance.

2008-10-10  Soeren Sonnenburg <debian@nn7.de>

	* SHOGUN Release version 0.6.5